traefikauth.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefikauth
  namespace: traefik
  labels:
    app: containous
    name: traefikauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containous
      task: traefikauth
  template:
    metadata:
      labels:
        app: containous
        task: traefikauth
    spec:
      containers:
        - name: traefikauth
          image: thomseddon/traefik-forward-auth:2
          ports:
            - containerPort: 4181
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: traefikauth
  namespace: traefik

spec:
  ports:
    - name: http
      protocol: TCP
      port: 4181
      targetPort: 4181
  selector:
    app: containous
    task: traefikauth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefikauth-route
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefikauth.my-domain.com`)
      kind: Rule
      services:
        - name: traefikauth
          port: 4181
      middlewares:
        - name: auth
  tls:
    secretName: traefikauth-tls        
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://traefikauth:4181
    authResponseHeaders: 
      - X-Forwarded-User
    trustForwardHeader: true
